--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-lazy-load": "^3.0.13",
     "react-lazyload": "^2.6.2",
     "react-minimal-pie-chart": "^4.2.0",
+    "react-pdf": "^4.1.0",
     "react-responsive-navbar": "~1.0.11",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
